Update deployment scripts for Laravel Filament compatibility
- Add Filament component caching in webhook
- Add npm build process for Vite assets
- Add Filament troubleshooting script
- Update .env.example for production settings
- Fix permissions for Filament requirements

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,13 @@
-APP_NAME=Laravel
-APP_ENV=local
+APP_NAME="MY 17"
+APP_ENV=production
 APP_KEY=
-APP_DEBUG=true
-APP_TIMEZONE=UTC
-APP_URL=http://localhost
+APP_DEBUG=false
+APP_TIMEZONE=Asia/Jakarta
+APP_URL=https://my17.web.id
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
-APP_FAKER_LOCALE=en_US
+APP_FAKER_LOCALE=id_ID
 
 APP_MAINTENANCE_DRIVER=file
 APP_MAINTENANCE_STORE=database
