{Config} setup email to model user

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ APP_KEY=
 APP_DEBUG=false
 APP_TIMEZONE=Asia/Jakarta
 APP_URL=http://your-domain.com
+APP_COMPANY_DOMAIN=your-company.com
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
